# CodeImageTool

./: .gitignore  ImageHandler.py  README.md  constants.py  requirements.txt
src/: .vimrc  CMakeLists.txt  Makefile  main.py  setup.py
src/include/: CONST.hpp  ITokenizer.hpp  Token.hpp  TokenizerCPP.hpp
src/src/: TokenizerCPP.cpp  main.cpp
src/test/: TokenizerCPP_Test.cpp  test
